--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,37 @@
 server:
   port: 8089
+  
+  
+############################################################################
+# Log properties
+logging:
+  file:
+    name: ${app.home}/websocket-server.log
+  config: "classpath:logback-spring.xml"
+  pattern:
+    console: "%d{HH:mm:ss.SSS} %-5level %X{MDC.REQUEST_ID} %-15logger{0} - %msg%n%rEx{full,
+                Java.lang.reflect.Method,
+                org.apache.catalina,
+                org.springframework.aop,
+                org.springframework.security,
+                org.springframework.transaction,
+                org.springframework.web,
+                org.springframework.test,
+                org.springframework.mock,
+                org.junit,
+                sun.reflect,
+                net.sf.cglib,
+                CGLIB,
+                java.lang.Thread,
+                java.util.concurrent,
+                org.apache.coyote,
+                org.apache.tomcat,
+                javax.servlet.http.HttpServlet
+                com.zaxxer.hikari.pool
+                }"
+    file: "%d{HH:mm:ss.SSS} %-5level %X{MDC.REQUEST_ID} %-15logger{0} - %msg%n"
+  logback:
+    rollingpolicy:
+      file-name-pattern: "${LOG_FILE}.%d{yyyy-MM-dd}.%i.gz"
+      max-file-size: 100MB
+      max-history: 365
