--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,13 @@
 server:
   port: 8089
   
+spring:
+  redis:
+    host: redis-15217.c244.us-east-1-2.ec2.cloud.redislabs.com
+    port: 15217
+    username: default
+    password: 5MECL7QcyIbDgBbupvWuRwBunfwynddS
+ 
   
 ############################################################################
 # Log properties
