--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,20 @@
 server:
   port: 8089
+  servlet:
+    encoding:
+      charset: UTF-8
+      force: true
   
 spring:
   redis:
-    host: redis-15217.c244.us-east-1-2.ec2.cloud.redislabs.com
-    port: 15217
-    username: default
-    password: 5MECL7QcyIbDgBbupvWuRwBunfwynddS
-    #host: 133.186.171.42
-    #port: 46094
-    #username: kcc-redis
-    #password: 
+    #host: redis-15217.c244.us-east-1-2.ec2.cloud.redislabs.com
+    #port: 15217
+    #username: default
+    #password: 5MECL7QcyIbDgBbupvWuRwBunfwynddS
+    host: 133.186.171.42
+    port: 46094
+    username: kcc-redis
+    password: 
  
   
 ############################################################################
